# CC-CTF-ONLINE-4

./: LICENSE  README.md  TODO.txt  WRITEUP.md  compose.yaml  convert_exe_to_binary.py  flag_generator.py
challenges/crypto/deranged_lunatic_problem/: README.md  problem.py
challenges/crypto/modus_ponens/: README.md  encrypt_cipher.py
challenges/crypto/richard_stallman_attack/: README.md  dec_flag.txt  enc_flag.txt  gen_challenge.py  output.txt
challenges/mobile/zippy/: Dockerfile  index.php  solv.py
challenges/pwn/anger_as_motivation/: Dockerfile  Makefile  README.md  motivation  motivation.c  run.sh  script.sh
challenges/pwn/fail_safe/: Cargo.toml  Dockerfile  README.md  build.sh  flag.txt  run.sh  script.sh
challenges/pwn/global_entry/: Dockerfile  Makefile  README.md  global_entry  global_entry.c  run.sh  script.sh
challenges/pwn/work_as_motivation/: Dockerfile  Makefile  README.md  flag.txt  script.sh  work  work.c
challenges/rev/bad_friends/: README.md  flag.txt
challenges/rev/meditation/: Cargo.toml  Makefile  README.md  meditation
challenges/rev/meditation/src/: main.rs
challenges/rev/mistaken_identity/: Makefile  README.md  flag.enc  flag.txt  whoami  whoami.c
challenges/rev/mugatu/: Makefile  README.md  mugatu  mugatu.c
challenges/rev/pesticide/: Makefile  README.md  build.sh  patch_bin.py  pesticide.c
challenges/rev/plain_sight/: Makefile  README.md  plain_sight.c
challenges/rev/priorities/: Dockerfile  Makefile  README.md  priorities  priorities.c  priorities.c.bak  script.sh
challenges/web/catalog/: app.py  (+4 more)
template/: README.md
(+66 files in other folders)
