[package]
name = "meditation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hex = "0.4.3"
http = "1.1.0"
reqwest = { version = "0.11" }
tokio = { version = "1.32", features = ["full"] }

[profile.release]
strip = true
lto = true
opt-level = 3
debug = false
